Bug 1192556 - #ifdef AtomicWord typedef in protobuf to fix build on OpenBSD/i386. r=fitzgen